# MovixOpenSource

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  capacitor.config.ts  docker-compose.yml  eslint.config.js  index.html  manifest.json  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
API/: README.md
API/Mainapi/: .env.example  README.md  app.js  checkVip.js  commentsRoutes.js  likesRoutes.js  linkSubmissionsRoutes.js  liveTvRoutes.js  mysqlPool.js  package-lock.json  package.json  recommendationRoutes.js  server.js  sharedListsRoutes.js  top10Routes.js  wishboardRoutes.js  wrappedRoutes.js  wrapped_tables.sql
API/miscs/: .env.example  README.md  bypass403.py
API/proxiesembed/: .env.example  README.md  requirements.txt  server.py
PreMid/: metadata.json  presence.ts
PreMid/core/: types.ts  (+3 more)
RivestreamCloudflareProxy/: worker.js  wrangler.toml
app/: .env.example  README.md  app.json  package-lock.json  package.json  tsconfig.json  version.json
baddomain/: index.html
cloudflareproxy/: worker.js  wrangler.toml
extension/: README.md
functions/: _middleware.js
public/: _redirects  _routes.json  llms.txt  robots.txt  sitemap.xml  sw.js
scripts/: core-schema.sql  import-lkstv-profiles.ps1  import-sql-phase2.ps1  lkstv-schema.sql  publish-app.mjs  start-lkstv.ps1
server/: index.js
src/: App.tsx  README.md  index.css  main.tsx
userscript/: README.md  movix.user.js
wasm/watchparty-sync/: Cargo.toml  README.md
wasm/watchparty-sync/src/: lib.rs
(+606 files in other folders)
