[package]
name = "watchparty_sync"
version = "0.1.0"
edition = "2021"
description = "Sync Pro engine for Movix WatchParty"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
